package com.heloisa.cupcakestore.model;

public class Usuario {

}
